[gd_scene load_steps=3 format=3 uid="uid://bqal12aijsoke"]

[ext_resource type="Script" path="res://assets/UsableObject.gd" id="1_h1pyu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tex1k"]

[node name="UsableObject" type="Node2D"]
script = ExtResource("1_h1pyu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tex1k")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
